objects/talkdesk__Talkdesk_Activity__c.object
<CustomObject>
    <fields>
        <fullName>talkdesk__Abandoned__c</fullName>
        <formula>AND(CONTAINS(LOWER(TEXT(talkdesk__Type__c)), &quot;abandoned&quot;), NOT(CONTAINS(LOWER(TEXT(talkdesk__Type__c)), &quot;short&quot;)))</formula>
        <label>Is Abandoned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>talkdesk__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Talkdesk Activities</relationshipLabel>
        <relationshipName>Talkdesk_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>talkdesk__CSAT_Icon__c</fullName>
        <formula>IF(talkdesk__CSAT__c &lt;= 0 || talkdesk__CSAT__c &gt; 5,
            &quot;&quot;,
            IMAGE(&quot;/resource/talkdesk__assets/csat_icons/&quot; &amp; TEXT(talkdesk__CSAT__c) &amp; &quot;-stars.png&quot;, TEXT(talkdesk__CSAT__c))
            )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSAT Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__CSAT_Response_del__c</fullName>
        <formula>IF ( ISBLANK( talkdesk__CSAT__c ), false, true)</formula>
        <label>CSAT Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>talkdesk__CSAT_Text_Response__c</fullName>
        <description>Contains free form text from CSAT SMS response</description>
        <label>CSAT Text Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>talkdesk__CSAT__c</fullName>
        <label>CSAT</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>talkdesk__CallDuration__c</fullName>
        <formula>IF(FLOOR(ROUND(talkdesk__Talk_Time_sec__c,0)/(60*60))&lt;10, &quot;0&quot;&amp;TEXT(FLOOR(ROUND(talkdesk__Talk_Time_sec__c,0)/(60*60))),TEXT(FLOOR(ROUND(talkdesk__Talk_Time_sec__c,0)/(60*60))))
            &amp;&quot;:&quot; &amp;
            IF(MOD(FLOOR(ROUND(talkdesk__Talk_Time_sec__c,0)/60),60)&lt;10, &quot;0&quot;&amp;TEXT(MOD(FLOOR(ROUND(talkdesk__Talk_Time_sec__c,0)/60),60)),TEXT(MOD(FLOOR(ROUND(talkdesk__Talk_Time_sec__c,0)/60),60)))
            &amp;&quot;:&quot; &amp;
            IF(MOD(ROUND(talkdesk__Talk_Time_sec__c,0),(60))&lt;10, &quot;0&quot;&amp; TEXT(FLOOR(MOD(ROUND(talkdesk__Talk_Time_sec__c,0),(60)))), TEXT(FLOOR(MOD(ROUND(talkdesk__Talk_Time_sec__c,0),(60)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Talk Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__Call_Id__c</fullName>
        <label>Call Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Talkdesk Activities</relationshipLabel>
        <relationshipName>Talkdesk_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>talkdesk__Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Voice</fullName>
                    <default>true</default>
                    <label>Voice</label>
                </value>
                <value>
                    <fullName>Chat</fullName>
                    <isActive>false</isActive>
                    <label>Chat</label>
                </value>
                <value>
                    <fullName>MMS</fullName>
                    <isActive>false</isActive>
                    <label>MMS</label>
                </value>
                <value>
                    <fullName>Video</fullName>
                    <isActive>false</isActive>
                    <label>Video</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>talkdesk__Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>talkdesk__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Talkdesk Activities</relationshipLabel>
        <relationshipName>Talkdesk_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>talkdesk__Created_Time__c</fullName>
        <description>Holds the time at when the Talkdesk Activity was created, following the value of Start Time field.</description>
        <label>Created Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__Day_of_Week__c</fullName>
        <formula>IF(ISBLANK(talkdesk__Created_Time__c), case(
            mod( dateValue(talkdesk__Start_Time__c + (talkdesk__user_timezone__c / 24)) - date(1900, 1, 7), 7),
            0, &quot;7 - Sunday&quot;,
            1, &quot;1 - Monday&quot;,
            2, &quot;2 - Tuesday&quot;,
            3, &quot;3 - Wednesday&quot;,
            4, &quot;4 - Thursday&quot;,
            5, &quot;5 - Friday&quot;,
            6, &quot;6 - Saturday&quot;,
            &quot;&quot;
            ), case(
            mod( DATE(
            VALUE(LEFT(talkdesk__Created_Time__c , 4)),
            VALUE(MID(talkdesk__Created_Time__c, 6, 2)),
            VALUE(MID(talkdesk__Created_Time__c , 9, 2))) - date(1900, 1, 7), 7),
            0, &quot;7 - Sunday&quot;,
            1, &quot;1 - Monday&quot;,
            2, &quot;2 - Tuesday&quot;,
            3, &quot;3 - Wednesday&quot;,
            4, &quot;4 - Thursday&quot;,
            5, &quot;5 - Friday&quot;,
            6, &quot;6 - Saturday&quot;,
            &quot;&quot;
            ))</formula>
        <label>Day of Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__DispositionCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Disposition Code (Lookup)</label>
        <referenceTo>talkdesk__Talkdesk_Disposition_Code__c</referenceTo>
        <relationshipLabel>Talkdesk Activities</relationshipLabel>
        <relationshipName>Talkdesk_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>talkdesk__Disposition_Code_External_Id__c</fullName>
        <label>Disposition Code External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__Disposition_Code__c</fullName>
        <label>Disposition Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attempting Contact</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Successful Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>talkdesk__End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>talkdesk__External_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Selected if phone call was forwarded or transferred to an external number</description>
        <label>Is External Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>talkdesk__Half_Hour__c</fullName>
        <formula>IF(ISBLANK(talkdesk__Created_Time__c), mid(text(talkdesk__Start_Time__c + (talkdesk__user_timezone__c / 24)), 12, 2) &amp; IF(VALUE(MID(TEXT(talkdesk__Start_Time__c), 15, 2)) &lt; 30, &apos;:00&apos;,&apos;:30&apos;), mid(talkdesk__Created_Time__c, 12, 2) &amp; IF(VALUE(MID(talkdesk__Created_Time__c, 15, 2)) &lt; 30, &apos;:00&apos;,&apos;:30&apos;))</formula>
        <label>Half Hour of Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__Hold_TIme_sec__c</fullName>
        <label>Hold Time (sec)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>talkdesk__Hold_Time__c</fullName>
        <formula>IF(FLOOR(ROUND(talkdesk__Hold_TIme_sec__c,0)/(60*60))&lt;10, &quot;0&quot;&amp;TEXT(FLOOR(ROUND(talkdesk__Hold_TIme_sec__c,0)/(60*60))),TEXT(FLOOR(ROUND(talkdesk__Hold_TIme_sec__c,0)/(60*60))))
            &amp;&quot;:&quot; &amp;
            IF(MOD(FLOOR(ROUND(talkdesk__Hold_TIme_sec__c,0)/60),60)&lt;10, &quot;0&quot;&amp;TEXT(MOD(FLOOR(ROUND(talkdesk__Hold_TIme_sec__c,0)/60),60)),TEXT(MOD(FLOOR(ROUND(talkdesk__Hold_TIme_sec__c,0)/60),60)))
            &amp;&quot;:&quot; &amp;
            IF(MOD(ROUND(talkdesk__Hold_TIme_sec__c,0),(60))&lt;10, &quot;0&quot;&amp; TEXT(FLOOR(MOD(ROUND(talkdesk__Hold_TIme_sec__c,0),(60)))), TEXT(FLOOR(MOD(ROUND(talkdesk__Hold_TIme_sec__c,0),(60)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hold Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__Hour_of_Day__c</fullName>
        <formula>IF(ISBLANK(talkdesk__Created_Time__c), mid(text(talkdesk__Start_Time__c + (talkdesk__user_timezone__c / 24)), 12, 2) &amp; &apos;:00&apos;, mid(talkdesk__Created_Time__c, 12, 2) &amp; &apos;:00&apos;)</formula>
        <label>Hour of Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__IVR_Options_raw__c</fullName>
        <label>IVR Options (raw)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__If_No_Answer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Selected if the &quot;If No Answer&quot; rules configured in Talkdesk for this phone number were executed for this call</description>
        <label>If No Answer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>talkdesk__In_Business_Hours_del__c</fullName>
        <defaultValue>true</defaultValue>
        <label>In Business Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>talkdesk__Is_Callback_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Callback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>talkdesk__Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>talkdesk__Is_Mood_set__c</fullName>
        <formula>IF (talkdesk__MoodNumValue__c  &lt;1 || talkdesk__MoodNumValue__c &gt;5, false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Mood set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>talkdesk__Is_Sample__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if the log entry was uploaded as a sample</description>
        <inlineHelpText>Denotes if the log entry was uploaded as a sample</inlineHelpText>
        <label>Is Sample</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>talkdesk__Is_Transfer_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>talkdesk__Last_Trigger_Executed__c</fullName>
        <label>Last trigger executed for TD Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Talkdesk Activities</relationshipLabel>
        <relationshipName>Talkdesk_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>talkdesk__Missed__c</fullName>
        <formula>CONTAINS(LOWER(TEXT(talkdesk__Type__c)), &quot;missed&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Missed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>talkdesk__Month_of_Year__c</fullName>
        <formula>IF(ISBLANK(talkdesk__Created_Time__c), case(
            value(mid(text(talkdesk__Start_Time__c + (talkdesk__user_timezone__c / 24)), 6, 2)),
            1, &quot;January&quot;,
            2, &quot;February&quot;,
            3, &quot;March&quot;,
            4, &quot;April&quot;,
            5, &quot;May&quot;,
            6, &quot;June&quot;,
            7, &quot;July&quot;,
            8, &quot;August&quot;,
            9, &quot;September&quot;,
            10, &quot;October&quot;,
            11, &quot;November&quot;,
            &quot;December&quot;
            ), case(
            value(mid(talkdesk__Created_Time__c, 6, 2)),
            1, &quot;January&quot;,
            2, &quot;February&quot;,
            3, &quot;March&quot;,
            4, &quot;April&quot;,
            5, &quot;May&quot;,
            6, &quot;June&quot;,
            7, &quot;July&quot;,
            8, &quot;August&quot;,
            9, &quot;September&quot;,
            10, &quot;October&quot;,
            11, &quot;November&quot;,
            &quot;December&quot;
            ))</formula>
        <label>Month of Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__MoodNumValue__c</fullName>
        <formula>CASE(TEXT(talkdesk__Mood_PL__c), &quot;happy&quot;, 5, &quot;neutral&quot;, 3, &quot;unhappy&quot;, 1,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mood Num Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>talkdesk__Mood_Face__c</fullName>
        <formula>CASE(
            TEXT(talkdesk__Mood_PL__c),

            &quot;happy&quot;, IMAGE(&quot;/resource/talkdesk__assets/mood_icons/mood--happy.png&quot;, &apos;Happy&apos;),

            &quot;neutral&quot;, IMAGE(&quot;/resource/talkdesk__assets/mood_icons/mood--neutral.png&quot;, &apos;Neutral&apos;),

            &quot;unhappy&quot;, IMAGE(&quot;/resource/talkdesk__assets/mood_icons/mood--unhappy.png&quot;, &apos;Unhappy&apos;),

            &quot;not_applicable&quot;, IMAGE(&quot;/resource/talkdesk__assets/mood_icons/mood--na.png&quot;, &apos;N/A&apos;),

            &quot;&quot;
            )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mood Face</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__Mood_PL__c</fullName>
        <label>Mood</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>happy</fullName>
                </value>
                <value>
                    <fullName>unhappy</fullName>
                </value>
                <value>
                    <fullName>neutral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>talkdesk__Name_Id__c</fullName>
        <label>Name Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>talkdesk__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Talkdesk Activities</relationshipLabel>
        <relationshipName>Talkdesk_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>talkdesk__Recording__c</fullName>
        <label>Recording</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>talkdesk__Related_To__c</fullName>
        <label>Related To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__Result__c</fullName>
        <label>Hangup</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Offered</fullName>
                </value>
                <value>
                    <fullName>IVR</fullName>
                </value>
                <value>
                    <fullName>Handled</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Waiting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>talkdesk__Ring_Groups__c</fullName>
        <label>Ring Groups</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admins</fullName>
                </value>
                <value>
                    <fullName>Agents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>talkdesk__SLA__c</fullName>
        <formula>if(  ISPICKVAL(talkdesk__Channel__c , &quot;Voice&quot;), if(talkdesk__Wait_Time_sec__c &lt; 20,true,false), false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>talkdesk__SMS_Job_Id__c</fullName>
        <description>Field relating the Talkdesk activity to a given instance of the SMS batch job</description>
        <label>SMS Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__Speed_to_Answer__c</fullName>
        <formula>IF(FLOOR(ROUND(talkdesk__Speed_to_Answer_sec_del__c,0)/(60*60))&lt;10, &quot;0&quot;&amp;TEXT(FLOOR(ROUND(talkdesk__Speed_to_Answer_sec_del__c,0)/(60*60))),TEXT(FLOOR(talkdesk__Speed_to_Answer_sec_del__c/(60*60))))
            &amp;&quot;:&quot; &amp;
            IF(MOD(FLOOR(ROUND(talkdesk__Speed_to_Answer_sec_del__c,0)/60),60)&lt;10, &quot;0&quot;&amp;TEXT(MOD(FLOOR(ROUND(talkdesk__Speed_to_Answer_sec_del__c,0)/60),60)),TEXT(MOD(FLOOR(ROUND(talkdesk__Speed_to_Answer_sec_del__c,0)/60),60)))
            &amp;&quot;:&quot; &amp;
            IF(MOD(ROUND(talkdesk__Speed_to_Answer_sec_del__c,0),(60))&lt;10, &quot;0&quot;&amp; TEXT(FLOOR(MOD(ROUND(talkdesk__Speed_to_Answer_sec_del__c,0),(60)))), TEXT(FLOOR( MOD(ROUND(talkdesk__Speed_to_Answer_sec_del__c,0),(60)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Speed to Answer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__Speed_to_Answer_sec_del__c</fullName>
        <label>Speed to Answer (sec)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>talkdesk__Start_Date__c</fullName>
        <formula>DATEVALUE(talkdesk__Start_Time__c +
            ( ($Setup.talkdesk__Talkdesk__c.talkdesk__UTC_Offset__c * 60) / 1440 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>talkdesk__Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>talkdesk__Status__c</fullName>
        <description>Delivery status of SMS message</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sending</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Undelivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>talkdesk__Talk_Time_sec__c</fullName>
        <label>Talk Time (sec)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>talkdesk__Talkdesk_Id__c</fullName>
        <externalId>true</externalId>
        <label>Talkdesk Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>talkdesk__Talkdesk_Phone_Number__c</fullName>
        <label>Talkdesk Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>talkdesk__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Missed</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>Outbound_Missed</fullName>
                </value>
                <value>
                    <fullName>Outbound_Voicemail</fullName>
                </value>
                <value>
                    <fullName>Voicemail</fullName>
                </value>
                <value>
                    <fullName>Short_Abandoned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>talkdesk__UserEmail__c</fullName>
        <label>User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>talkdesk__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Talkdesk_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>talkdesk__Wait_Time__c</fullName>
        <formula>IF(FLOOR(ROUND(talkdesk__Wait_Time_sec__c,0)/(60*60))&lt;10, &quot;0&quot;&amp;TEXT(FLOOR(ROUND(talkdesk__Wait_Time_sec__c,0)/(60*60))),TEXT(FLOOR(ROUND(talkdesk__Wait_Time_sec__c,0)/(60*60))))
            &amp;&quot;:&quot; &amp;
            IF(MOD(FLOOR(ROUND(talkdesk__Wait_Time_sec__c,0)/60),60)&lt;10, &quot;0&quot;&amp;TEXT(MOD(FLOOR(ROUND(talkdesk__Wait_Time_sec__c,0)/60),60)),TEXT(MOD(FLOOR(ROUND(talkdesk__Wait_Time_sec__c,0)/60),60)))
            &amp;&quot;:&quot; &amp;
            IF(MOD(ROUND(talkdesk__Wait_Time_sec__c,0),(60))&lt;10, &quot;0&quot;&amp; TEXT(FLOOR(MOD(ROUND(talkdesk__Wait_Time_sec__c,0),(60)))), TEXT(FLOOR(MOD(ROUND(talkdesk__Wait_Time_sec__c,0),(60)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wait Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__Wait_Time_sec__c</fullName>
        <label>Wait Time (sec)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>talkdesk__user_timezone__c</fullName>
        <formula>(dateValue(dateTimeValue(text(today())+&quot; 00:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 01:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 02:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 03:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 04:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 05:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 06:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 07:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 08:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 09:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 10:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 11:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 12:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 13:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 14:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 15:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 16:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 17:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 18:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 19:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 20:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 21:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 22:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 23:00:00&quot;)) - today())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Timezone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Talkdesk Activity</label>
    <listViews>
        <fullName>talkdesk__Abandoned_Calls</fullName>
        <columns>talkdesk__Start_Time__c</columns>
        <columns>talkdesk__In_Business_Hours_del__c</columns>
        <columns>NAME</columns>
        <columns>talkdesk__Contact__c</columns>
        <columns>talkdesk__Ring_Groups__c</columns>
        <columns>talkdesk__Wait_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>talkdesk__Abandoned__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Abandoned Calls</label>
    </listViews>
    <listViews>
        <fullName>talkdesk__All</fullName>
        <columns>talkdesk__Start_Time__c</columns>
        <columns>talkdesk__Channel__c</columns>
        <columns>NAME</columns>
        <columns>talkdesk__Contact__c</columns>
        <columns>talkdesk__Case__c</columns>
        <columns>talkdesk__User__c</columns>
        <columns>talkdesk__Ring_Groups__c</columns>
        <columns>talkdesk__CallDuration__c</columns>
        <columns>talkdesk__Notes__c</columns>
        <columns>talkdesk__Recording__c</columns>
        <columns>talkdesk__Disposition_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>talkdesk__Connected_Calls</fullName>
        <columns>talkdesk__Start_Time__c</columns>
        <columns>NAME</columns>
        <columns>talkdesk__Contact__c</columns>
        <columns>talkdesk__Case__c</columns>
        <columns>talkdesk__User__c</columns>
        <columns>talkdesk__Ring_Groups__c</columns>
        <columns>talkdesk__CallDuration__c</columns>
        <columns>talkdesk__Notes__c</columns>
        <columns>talkdesk__Recording__c</columns>
        <columns>talkdesk__DispositionCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>talkdesk__Type__c</field>
            <operation>equals</operation>
            <value>Inbound,Outbound,Outbound_Voicemail</value>
        </filters>
        <filters>
            <field>talkdesk__Channel__c</field>
            <operation>equals</operation>
            <value>Voice</value>
        </filters>
        <label>Connected Calls</label>
    </listViews>
    <listViews>
        <fullName>talkdesk__Missed_Calls</fullName>
        <columns>talkdesk__Start_Time__c</columns>
        <columns>talkdesk__In_Business_Hours_del__c</columns>
        <columns>NAME</columns>
        <columns>talkdesk__Contact__c</columns>
        <columns>talkdesk__Talkdesk_Phone_Number__c</columns>
        <columns>talkdesk__Ring_Groups__c</columns>
        <columns>talkdesk__Wait_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>talkdesk__Missed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>talkdesk__Channel__c</field>
            <operation>equals</operation>
            <value>Voice</value>
        </filters>
        <label>Missed Calls</label>
    </listViews>
    <listViews>
        <fullName>talkdesk__Recent_Calls</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>talkdesk__Start_Time__c</columns>
        <columns>NAME</columns>
        <columns>talkdesk__Contact__c</columns>
        <columns>talkdesk__Case__c</columns>
        <columns>talkdesk__User__c</columns>
        <columns>talkdesk__Ring_Groups__c</columns>
        <columns>talkdesk__CallDuration__c</columns>
        <columns>talkdesk__Notes__c</columns>
        <columns>talkdesk__Recording__c</columns>
        <columns>talkdesk__Disposition_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>talkdesk__Type__c</field>
            <operation>equals</operation>
            <value>Inbound,Outbound,Outbound_Voicemail</value>
        </filters>
        <filters>
            <field>talkdesk__Channel__c</field>
            <operation>equals</operation>
            <value>Voice</value>
        </filters>
        <filters>
            <field>talkdesk__Start_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Recent Calls</label>
    </listViews>
    <listViews>
        <fullName>talkdesk__Voicemails</fullName>
        <columns>talkdesk__Start_Time__c</columns>
        <columns>talkdesk__In_Business_Hours_del__c</columns>
        <columns>NAME</columns>
        <columns>talkdesk__Contact__c</columns>
        <columns>talkdesk__Talkdesk_Phone_Number__c</columns>
        <columns>talkdesk__Ring_Groups__c</columns>
        <columns>talkdesk__Wait_Time__c</columns>
        <columns>talkdesk__Recording__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>talkdesk__Type__c</field>
            <operation>equals</operation>
            <value>Voicemail</value>
        </filters>
        <filters>
            <field>talkdesk__Channel__c</field>
            <operation>equals</operation>
            <value>Voice</value>
        </filters>
        <label>Voicemails</label>
    </listViews>
    <nameField>
        <label>Talkdesk Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Talkdesk Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>